<resources>
    <string name="app_name">Jai Shree Ganesh Textile</string>

    <string name="tag_line">Fashion as unique as you are !</string>

    <string name="tag_line_2">Laces, Cloth, Boutique\n and more &#8230;</string>
    <string name="login">Login</string>
    <string name="sign_up">Signup</string>
    <string name="create_account">Create Account</string>
    <string name="create_admin_account">I\'m an Admin ?</string>
    <string name="create_non_admin_account">I\'m not an Admin ?</string>

    <string name="enter_full_name">Full Name</string>
    <string name="enter_username">Username</string>
    <string name="enter_email">Email</string>
    <string name="enter__password">Password</string>
    <string name="enter_phone_number">Phone Number</string>
    <string name="enter_password"> Enter Password</string>

    <string name="choose_gender">Choose Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="select_your_dob">Date Of Birth</string>

    <string name="forgot_password">Forgot Password?</string>
    <string name="forget_password">FORGOT\n PASSWORD</string>
    <string name="forget_password_detail">Provide phone number for which you want to reset the password</string>
    <string name="remember_me">Remember Me</string>

    <string name="back_btn">Back</string>
    <string name="next_btn">Next</string>
    <string name="one">1/3</string>
    <string name="two">2/3</string>
    <string name="three">3/3</string>

    <string name="otp_code_text">CO\nDE</string>
    <string name="otp_verification_text">Verification</string>
    <string name="otp_description_text">Enter the one time password sent on\n{your mobile number}</string>
    <string name="verify_code">Verify Code</string>

    <string name="new_credentials">NEW <br /> CREDENTIALS</string>
    <string name="new_credentials_details">Your identity has been verified.\nSet your new password.</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="update">Update</string>

    <string name="password_updated">PASSWORD\n UPDATED</string>
    <string name="password_updated_success_message">Your password has been successfully updated !</string>
    <string name="success_signed_up">SUCCESSFULLY\n SIGNED UP</string>
    <string name="success_signed_up_message">Account has been created !\nLogin to shop !</string>

    <string name="cross_btn">Close</string>

    <string name="add_new_product">Add New Product</string>
    <string name="product_name">Product Name &#8230;</string>
    <string name="product_description">Product Description &#8230;</string>
    <string name="product_price">Product Price &#8230;</string>
    <string name="add_product">Add Product</string>

    <string name="home">HOME</string>
    <string name="your_cart">CART</string>
    <string name="all_categories">ALL CATEGORIES</string>
    <string name="orders">Your Orders</string>

    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>

    <string name="close">Close</string>
    <string name="change_profile">Change Profile</string>
    <string name="enter_address">Enter Address</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="total_price">Total Price - </string>
    <string name="product_quantity">Product Quantity</string>

    <string name="enter_details">Please enter Shipment details !</string>
    <string name="enter_city">Your City Name &#8230;</string>
    <string name="order_success_message">Congratulations, your final order has been placed successfully.\nSoon you will receive the order at entered address\nAfter successful confirmation, you can place another order\nTHANK YOU !!</string>

    <string name="check_new_orders">Check New Orders</string>
    <string name="new_orders">New Orders</string>
    <string name="user_name">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="addr_city">Address, City</string>
    <string name="dt_time">Date, Time</string>
    <string name="show_product">Show Order Product</string>
    <string name="search">Search</string>

    <string name="maintain_products">Maintain Products</string>
    <string name="enter_delivery_address">Enter Delivery Address</string>

</resources>