<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/basic"
        android:padding="10dp"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/order_user_name"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginStart="5dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/order_phone_number"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:layout_marginEnd="5dp"
            android:layout_alignParentEnd="true"
            android:textAlignment="viewEnd"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/order_total_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/order_user_name"
            android:text="@string/product_price"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:textColor="@color/basic_dark"
            android:textSize="18sp"
            android:layout_marginStart="5dp"
            />

        <TextView
            android:id="@+id/order_address_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/order_total_price"
            android:text="@string/addr_city"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginStart="5dp"
            />

        <TextView
            android:id="@+id/order_date_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/order_address_city"
            android:text="@string/dt_time"
            android:gravity="center"
            android:textStyle="italic"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginStart="5dp"
            />

        <Button
            android:id="@+id/show_all_products_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/order_date_time"
            android:backgroundTint="@color/basic_dark"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/show_product"
            android:textSize="18sp"
            android:textColor="@color/white"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>