<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.ConfirmFinalOrderActivity">

        <TextView
            android:id="@+id/txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_details"
            android:fontFamily="@font/muli"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:layout_margin="25dp"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/shipment_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt"
            android:layout_marginTop="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/enter_full_name"
            android:inputType="text"
            />

        <!-- Phone Number for Confirmation Call -->
        <EditText
            android:id="@+id/shipment_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/shipment_name"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/enter_phone_number"
            android:inputType="phone"
            />

        <EditText
            android:id="@+id/shipment_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/shipment_phone_number"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/enter_delivery_address"
            android:inputType="textMultiLine"
            android:lines="5"
            android:minLines="4"
            android:scrollHorizontally="false"
            android:scrollbars="vertical"
            />

        <EditText
            android:id="@+id/shipment_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/shipment_address"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/enter_city"
            android:inputType="text"
            />

        <Button
            android:id="@+id/confirm_final_order_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/shipment_city"
            android:layout_marginTop="80dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/basic_dark"
            android:textAlignment="center"
            android:text="Confirm"
            android:textSize="18sp"
            />


</RelativeLayout>