<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.ProductDetails"
    android:background="@color/lightWhite"
    android:padding="20dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        android:id="@+id/product_image_details"/>

    <TextView
        android:id="@+id/product_name_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_image_details"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/muli_bold_italic"
        android:gravity="center"
        android:text="@string/product_name"
        android:textColor="@color/black"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/product_description_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/black_border"
        android:layout_below="@+id/product_name_details"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/product_description"
        android:textColor="@color/black"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/product_price_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_description_details"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/product_price"
        android:textColor="@color/basic_dark"
        android:textSize="32sp"/>

    <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
        android:id="@+id/number_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="6dp"
        app:textSize="12sp"
        app:initialNumber="1"
        app:finalNumber="1000"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/product_price_details"
        android:layout_marginTop="20dp"/>


    <Button
        android:id="@+id/pd_add_to_cart_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_to_cart"
        android:backgroundTint="@color/basic_dark"
        android:layout_alignParentBottom="true"
        android:layout_margin="15dp"
        android:textSize="18sp"/>


</RelativeLayout>