<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:elevation="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/basic"
        android:padding="10dp">

        <TextView
            android:id="@+id/cart_product_name"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginStart="5dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/cart_product_quantity"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/product_quantity"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginEnd="5dp"
            android:layout_alignParentEnd="true"
            android:textAlignment="viewEnd"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/cart_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cart_product_name"
            android:text="@string/product_price"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginStart="5dp"
            />

    </RelativeLayout>

</androidx.cardview.widget.CardView>