<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignup.ForgetPasswordSuccessMessage"
    android:padding="20dp"
    android:background="@color/white"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#00000000"/>

    <!--     We want to make all elements in center .. as it is LL, we use another LL with gravity : center -->
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_updated"
            android:textSize="40sp"
            android:fontFamily="@font/muli_extrabold"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="-80dp"/>

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/password_updated_icon"
            android:layout_margin="20dp"/>

        <TextView
            android:id="@+id/success_message_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli"
            android:gravity="center"
            android:text="@string/password_updated_success_message"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:backgroundTint="@color/basic"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:onClick="callLoginScreen"/>

    </LinearLayout>

</LinearLayout>
